# CommonUtils

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md
common_utils/: CMakeLists.txt  Common.h  IncludeImplCPU.hpp  IncludeImplCUDA.hpp  RuntimeAssertion.h  RuntimeAssertion_Impl.hpp  Utils.h
common_utils/data_structures/: Array2.h  Array2GPU.cuh  Array3.h  Array3GPU.cuh  Grid2.h  Grid2Interface.h  Grid3.h  Grid3Interface.h
common_utils/memory_managment/: MemoryContainer.h  MemoryContainerCUDA.cuh  MemoryType.h  MemoryWrapper.h  MemoryWrapperCUDA.cuh
common_utils/meta_structures/: BasicOperations.h  BasicTypes.h  SoA.h  Tuple.h  TypeList.h
common_utils/timing/: TimerCPU.h  TimerCPU_Impl.hpp  TimerGPU.h  TimerGPU_Impl.hpp  Timing.h
tests/: CMakeLists.txt
tests/integration_tests/: CMakeLists.txt  IncludeCPU.cpp  main.cpp
tests/unit_tests/: CMakeLists.txt  IncludeCUDA.cu  main.cpp
tests/unit_tests/data_structures/: Grid2InterfaceTest.cpp  Grid2Test.cpp  Grid3InterfaceTest.cpp  Grid3Test.cpp
tests/unit_tests/memory_managment/: MemoryContainerCPUTest.cpp  MemoryContainerCUDATest.cpp  MemoryWrapperCPUTest.cpp  MemoryWrapperCUDATest.cpp
tests/unit_tests/meta_structures/: BasicOperationsTest.cpp  BasicTypesTest.cpp  SoACPUTest.cpp  SoACUDATest.cpp  TupleTest.cpp  TypeListTest.cpp
tests/unit_tests/timing/: TimingTest.cpp
